--- a/index.html
+++ b/index.html
@@ -18,15 +18,19 @@
 <body>
   <p class="serif">Welcome to EyeWrite!</p>
 
+  <p>
+
+  </p>
+
   <input type="button" style="margin-left: 530px;"  onclick="location.href='./node_modules/webgazer/www/calibration.html';" value="Calibrate">
 
 
-  <input type="button" onclick="location.href='./eyewrite.html';" value="Create New Pad">
+  <input type="button" onclick="location.href='./eyewrite.html';" value="Create New Document">
   <br>
   <br>
 
 
-  <A id="existing" style="margin-left: 570px;">Join Existing Pad</A>
+  <A id="existing" style="margin-left: 570px;">Join Existing Document</A>
   <br>
   <input type="text" style="margin-left: 530px;" id="textInput" placeholder="existing link">
   <button onclick="send()">Enter</button>
