--- a/eyewrite.html
+++ b/eyewrite.html
@@ -99,7 +99,7 @@
     firebase.analytics();
 
     //// Get Firebase Database reference.
-    var firebaseRef = getExampleRef();
+    var firebaseRef = getRef();
 
     //// Create CodeMirror (with lineWrapping on).
     var codeMirror = CodeMirror(document.getElementById('firepad'), {
@@ -119,7 +119,7 @@
       document.getElementById('userlist'), userId);
 
     // Helper to get hash from end of URL or generate a random one.
-    function getExampleRef() {
+    function getRef() {
       var ref = firebase.database().ref();
       var hash = window.location.hash.replace(/#/g, '');
       if (hash) {
