fixed bug with updated WebGazer

--- a/eyewrite.html
+++ b/eyewrite.html
@@ -23,7 +23,7 @@
   <link rel='stylesheet' href='./css/firepad-userlist.css' />
 
   <!-- WebGazer -->
-  <script type='text/javascript' src='./node_modules/webgazer/www/webgazer.js'></script>
+  <script type='text/javascript' src='./node_modules/webgazer/dist/webgazer.js'></script>
 
   <!-- Include Twitter Bootstrap and jQuery: -->
   <link rel='stylesheet' href='./node_modules/bootstrap-multiselect/docs/css/bootstrap-3.3.2.min.css' type='text/css' />
@@ -136,6 +136,6 @@
 
 <script src='./scripts/UIAdjustments.js'></script>
 <!-- Mouse Visualization Script -->
-<script src='./scripts/mouseVis.js'></script>
+<script src='./scripts/visualization.js'></script>
 
 </html>
