--- a/eyewrite.html
+++ b/eyewrite.html
@@ -23,7 +23,7 @@
   <link rel='stylesheet' href='./css/firepad-userlist.css' />
 
   <!-- WebGazer -->
-  <script type='text/javascript' src='./node_modules/webgazer/dist/webgazer.js'></script>
+  <script type='text/javascript' src='./WebGazer/www/webgazer.js'></script>
 
   <!-- Include Twitter Bootstrap and jQuery: -->
   <link rel='stylesheet' href='./node_modules/bootstrap-multiselect/docs/css/bootstrap-3.3.2.min.css' type='text/css' />
@@ -77,7 +77,7 @@
       <input type="range" min="2" max="6" value="2" id="sentenceSlider">
     </div>
 
-    <A href="node_modules/webgazer/www/calibration.html" id="calibrationLink">
+    <A href="./WebGazer/www/calibration.html" id="calibrationLink">
       <input type="button" id="calibrationButton" value="Calibrate">
     </A>
   </div>
