--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </p>
 
     <input type="text" id="textInput" placeholder="Document Link">
-    <button class="btn btn-primary" id="joinBtn" onclick="send()" disabled>Join Pad</button>
+    <button class="btn btn-primary" id="joinBtn" onclick="send()" disabled>Join Document</button>
 
     <br>
     <br>
