switched firebase account to pomonahci

--- a/eyewrite.html
+++ b/eyewrite.html
@@ -82,14 +82,14 @@
 
   <script>
     var firebaseConfig = {
-      apiKey: 'AIzaSyBqy0PMzUcdYTh-MaKCXCR1GZGQrhlUs2s',
-      authDomain: 'neweyewrite.firebaseapp.com',
-      databaseURL: 'https://neweyewrite.firebaseio.com',
-      projectId: 'neweyewrite',
-      storageBucket: 'neweyewrite.appspot.com',
-      messagingSenderId: '555020691162',
-      appId: '1:555020691162:web:62d17e309001bca73a27e3',
-      measurementId: 'G-5NDK60WNMF'
+      apiKey: "AIzaSyAmD2D9XCpVDQcJF08chqCbkCpL-_Jfu_Y",
+      authDomain: "eyewrite-62d75.firebaseapp.com",
+      databaseURL: "https://eyewrite-62d75.firebaseio.com",
+      projectId: "eyewrite-62d75",
+      storageBucket: "eyewrite-62d75.appspot.com",
+      messagingSenderId: "998123311342",
+      appId: "1:998123311342:web:abed435afee503a2eb63ff",
+      measurementId: "G-8EGTMW2Q4G"
     };
 
     // Initialize Firebase
