switched voice chat join/leave buttons to on/off buttons

--- a/eyewrite.html
+++ b/eyewrite.html
@@ -75,11 +75,11 @@
 
     <div class="radio-buttons">
       <p>Voice Chat:</p>
-      <input type="radio" id="joinButton" name="chatChoice">
-      <label for="joinButton">Join</label>
+      <input type="radio" id="voiceOnButton" name="voiceChoice">
+      <label for="voiceOnButton">On</label>
 
-      <input type="radio" id="leaveButton" name="chatChoice" checked>
-      <label for="leaveButton">Leave</label>
+      <input type="radio" id="voiceOffButton" name="voiceChoice" checked>
+      <label for="voiceOffButton">Off</label>
     </div>
 
     <div id="slider-container">
