routed voiceChatSwitch functions

--- a/eyewrite.html
+++ b/eyewrite.html
@@ -114,8 +114,8 @@
         </div> -->
         <div class="inline-toggle-container">
           <div class="onoffswitch">
-            <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="myonoffswitch" tabindex="0">
-            <label class="onoffswitch-label" for="myonoffswitch">
+            <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="voiceChatSwitch" tabindex="0">
+            <label class="onoffswitch-label" for="voiceChatSwitch">
                 <span class="onoffswitch-inner"></span>
                 <span class="onoffswitch-switch"></span>
             </label>
