fixed send data button action and synced them

--- a/eyewrite.html
+++ b/eyewrite.html
@@ -63,8 +63,8 @@
         <!-- <input type="radio" id="sendButton" name="dataChoice" checked>
         <label for="sendButton" id="sendButtonLabel" type="radio">Send</label> -->
         <div class="onoffswitch">
-          <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="gazeswitch" tabindex="0">
-          <label class="onoffswitch-label" for="gazeswitch">
+          <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="gazeSwitch" tabindex="0">
+          <label class="onoffswitch-label" for="gazeSwitch">
               <span class="onoffswitch-inner"></span>
               <span class="onoffswitch-switch"></span>
           </label>
@@ -78,8 +78,8 @@
         <label for="blockButton" type="radio">Block</label> -->
         <div>
           <div class="onoffswitch">
-            <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="mouseswitch" tabindex="0">
-            <label class="onoffswitch-label" for="mouseswitch">
+            <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="mouseSwitch" tabindex="0">
+            <label class="onoffswitch-label" for="mouseSwitch">
                 <span class="onoffswitch-inner"></span>
                 <span class="onoffswitch-switch"></span>
             </label>
