added a separate multicheckbox widget for visualizing data

--- a/eyewrite.html
+++ b/eyewrite.html
@@ -56,6 +56,9 @@
     <div id='user-checkboxes-container'></div>
     <select id='user-checkboxes' multiple='multiple'></select>
 
+    <div id='visualize-control-container'></div>
+    <select id='visualize-checkboxes' multiple='multiple'></select>
+
     <div class="radio-buttons">
       <p>Send My Data:</p>
 
