removed sentence highlight size slider temporarily

--- a/eyewrite.html
+++ b/eyewrite.html
@@ -90,10 +90,10 @@
       
     </div>
 
-    <div id="slider-container">
+    <!-- <div id="slider-container">
       <p class="slider-text">Highlight Size: <span id="numSentences"></span></p>
       <input type="range" min="2" max="6" value="2" id="sentenceSlider">
-    </div>
+    </div> -->
 
     <div class="radio-buttons">
       <p>Send My Data:</p>
